# nichs-scan-project

debug/: buildWorkspace.sh  clean.sh
src/: .cproject  .project  CMakeLists.txt  Prova.cpp  Prova.hpp  VisualizerTest.cpp  main.cpp  main2.cpp  mainQt.cpp
src/algorithm/: AbstractAlgorithm.hpp  AlgorithmSignaler.hpp  CMakeLists.txt
src/algorithm/first_implementation/: SampleAlgorithm.cpp  SampleAlgorithm.hpp
src/configuration/: CMakeLists.txt  FileParser.cpp  FileParser.hpp  ImageLoader.cpp  ImageLoader.hpp
src/data/: CMakeLists.txt  Container.hpp  Image.hpp  ImageContainer.hpp
src/qt/: CMakeLists.txt  ImageInputList.hpp  ImageViewerForm.cpp  ImageViewerForm.hpp  ImageViewerForm.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/threading/: CMakeLists.txt  ControllerCyclicRunnable.cpp  ControllerCyclicRunnable.hpp  CyclicRunnable.cpp  CyclicRunnable.h  CyclicRunnable.hpp  Runnable.hpp  ThreadController.cpp  ThreadController.hpp
src/utility/: CMakeLists.txt  ImageScroller.cpp  ImageScroller.hpp  ImageUtils.cpp  ImageUtils.hpp  OutputContainer.hpp  Utility.cpp  Utility.hpp
src/visualizer/: AbstractEvent.cpp  AbstractEvent.hpp  CMakeLists.txt  EventHandler.hpp  IOVisualizer.cpp  IOVisualizer.hpp  KeyboardHandler.cpp  KeyboardHandler.hpp  Visualizer.cpp  Visualizer.hpp
src/visualizer/events/: EventProva.cpp  EventProva.hpp  Events.hpp  ExitEvent.hpp  NextImageEvent.hpp  PreviousImageEvent.hpp
